# vorderman

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
benches/: bench.rs
src/: expr.rs  lib.rs  main.rs  round.rs  search.rs  solver.rs
src/expr/: eval.rs  expr.rs  linked.rs  mod.rs  op.rs  parse.rs  search.rs  tree.rs  vec.rs
