[package]
name = "vorderman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
num = "0.4.3"
rand = "0.8.5"

[dev-dependencies]
test-case = "*"
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
